workspace/.gradle/gradle.log
This mapping 'snapshot_20160518' was designed for MC 1.9.4! Use at your own peril.This mapping 'snapshot_20160518' was designed for MC 1.9.4! Use at your own peril.

#################################################
         ForgeGradle 2.2-SNAPSHOT-9bc34b4        
  https://github.com/MinecraftForge/ForgeGradle  
#################################################
               Powered by MCP unknown               
             http://modcoderpack.com             
         by: Searge, ProfMobius, Fesh0r,         
         R4wk, ZeuX, IngisKahn, bspkrs           
#################################################
:deobfCompileDummyTask
:deobfProvidedDummyTask
:getVersionJson
:extractUserdev UP-TO-DATE
:downloadClient SKIPPED
:downloadServer SKIPPED
:splitServerJar SKIPPED
:mergeJars SKIPPED
:applyBinaryPatches SKIPPED
:extractDependencyATs SKIPPED
:extractMcpData SKIPPED
:extractMcpMappings
:genSrgs SKIPPED
:deobfMcMCP SKIPPED
:sourceApiJava UP-TO-DATE
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava UP-TO-DATE
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
E:\gregssgcraft-modified\workspace\build\sources\main\java\gcewing\sg\BaseBakedRenderTarget.java:47: error: diamond operator is not supported in -source 1.6
    protected static Map<EnumFacing, List<BakedQuad>> faceQuads = new HashMap<>();
                                                                              ^
  (use -source 7 or higher to enable diamond operator)
E:\gregssgcraft-modified\workspace\build\sources\main\java\gcewing\sg\BaseRenderingManager.java:144: error: diamond operator is not supported in -source 1.6
    protected List<CustomBakedModel> bakedModels = new ArrayList<>();
                                                                 ^
  (use -source 7 or higher to enable diamond operator)
E:\gregssgcraft-modified\workspace\build\sources\main\java\gcewing\sg\SGDimensionMap.java:21: error: diamond operator is not supported in -source 1.6
    protected List<Integer> indexToDimension = new ArrayList<>();
                                                             ^
  (use -source 7 or higher to enable diamond operator)
3 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 14.543 secs
